fix: horizontal scrollbar is now hidden

--- a/apps/web/app/index.css
+++ b/apps/web/app/index.css
@@ -266,6 +266,14 @@ html {
 }
 /* ------- end --------- */
 
+.scrollbar-hide {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+}
+.scrollbar-hide::-webkit-scrollbar {
+  display: none;
+}
+
 @supports (scrollbar-width: thin) {
   .scrollbar-thin {
     scrollbar-width: thin;
